tests/ui/ast_body_literal_from_term.stderr
error[E0506]: cannot assign to `lit` because it is borrowed
 --> $DIR/ast_body_literal_from_term.rs:8:5
  |
7 |     let blit = ast::BodyLiteral::from_literal(ast::Sign::NoSign, &lit);
  |                                                                  ---- borrow of `lit` occurs here
8 |     lit = ast::Literal::from_term(ast::Sign::NoSign, &term);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `lit` occurs here
9 |     let _end = (lit, blit);
  |                      ---- borrow later used here
